# investment-macro-analyzer

./: .gitignore  COMPLETED_INDICATOR_EXPANSION.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PLAN_CORRELATION_LAB_V2.md  README.md  README_KO.md  analyze_cnn.js  analyze_cnn_html.py  analyze_finhacker.js  analyze_macromicro.js  analyze_tradingview.js  check_data.py  check_schema.py  check_spx.py  dashboard.py  db-check.js  debug_backfill.py  debug_db.py  debug_ism.py  debug_risk_data.py  package-lock.json  package.json  tailwind.config.js  test_tiingo.py  tsconfig.json  vitest.config.ts
src-tauri/: Cargo.toml  audit_report.txt  build_log.txt  tauri.conf.json
src-tauri/migrations/: 20260116000001_init.sql  20260123000000_add_scheduler_status.sql  20260123000002_add_settings.sql  20260201000000_create_ai_reports.sql  20260201000001_create_risk_history.sql  20260205000000_yahoo_to_tiingo.sql  20260207000000_remove_tiingo_crypto.sql  20260207000001_revert_tiingo_indices.sql  20260207000002_create_api_keys.sql  20260208000000_create_market_events.sql  20260210000000_create_earnings_history.sql
src-tauri/scripts/: gemini_wrapper.cjs
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/analysis/: insight.rs  market_status.rs  mod.rs  regime.rs  signals.rs  statistics.rs  technical.rs  technicals.rs
src-tauri/src/commands/: calendar.rs  mod.rs  yahoo_test.rs
src-tauri/src/core/: alerts.rs  mod.rs  orchestrator.rs  rate_limiter.rs  scheduler.rs  seeder.rs  timeseries.rs
src-tauri/src/data/: fng_history.csv  (+1 more)
src-tauri/tests/: audit_indicators.rs
(+82 files in other folders)
